--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:serve": "json-server --watch db.json --port=3001",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "json-server": "^0.17.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
